Renaming of pdf file

--- a/amr-app/src/app/modules/user/components/user-list/user-list.component.html
+++ b/amr-app/src/app/modules/user/components/user-list/user-list.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 <mat-card style="margin-bottom: 60px;">
   <div class="container">
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-lg-6">
         <input type="text" id="Keywork" name="Keywork" [(ngModel)]="dataSource.Keyword" class="form-control" placeholder="{{ 'Keywork' | translate }}">
       </div>
@@ -16,11 +16,11 @@
       <div class="col-lg-2">
         <button type="button" class="btn btn-info" (click)="generatePdf()" translate>Export To PDF</button>
       </div>
-    </div> -->
+    </div>
     <div class="row" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
       <div id="users">
         <div class="card-body" *ngFor="let user of allUser;let i = index">
-          <!-- <h4 class="card-title">{{user.emailId}}</h4> -->
+          <h4 class="card-title">{{user.emailId}}</h4>
           <h3 style="float:right;">{{i+1}}</h3>
           <p class="card-text">{{user.address}}</p>
           <p class="card-text">
@@ -32,6 +32,6 @@
         <a class="link" (click)="onScroll()">Show more</a>
       </div>
     </div>
-    <!-- <h1> Total:{{allUser.length}} rows</h1> -->
+    <h1> Total:{{allUser.length}} rows</h1>
   </div>
 </mat-card>
